--- a/style/scss/variables/_layout-grid.scss
+++ b/style/scss/variables/_layout-grid.scss
@@ -6,6 +6,7 @@ $layout-columns: 24;
 
 // Layout Side Gutters
 $gutter-mobile: 20px;
+$gutter-tablet: 30px;
 $gutter-desktop: 50px;
 
 // Layout Top Padding
