--- a/style/scss/components/_partners.scss
+++ b/style/scss/components/_partners.scss
@@ -1,127 +1,71 @@
 .partners {
-  @include grid-container;
-  @include spacing(padding);
-  padding-left: 0;
-  padding-right: 0;
+  background: $alto;
 
-  @include mq($tablet) {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .logos {
-    @include no-bullet;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  nav {
+    @include grid-container;
+    padding: rem(20) 0;
 
     @include mq($desktop) {
-      padding-top: rem(30);
+      @include spacing(padding);
     }
 
-    > li {
-      width: cols(12);
-      padding: 0 cols(1);
-      margin: 0 0 rem(30);
+    > ul {
+      @include no-bullet;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
 
-      @include mq($tablet) {
-        margin-bottom: rem(70);
-        width: cols(8);
-        padding: 0 cols(2);
+      @include mq($desktop) {
+        flex-wrap: nowrap;
+      }
 
-        &:last-child,
-        &:nth-last-child(2),
-        &:nth-last-child(3) {
+      > li {
 
-          @include mq($tablet) {
-            margin-bottom: 0;
+        @include mq($tablet-max) {
+          padding: rem(20) rem(40) !important;
+        }
+
+        @include mq($desktop) {
+          flex-grow: 1;
+          padding: 0 rem(20);
+        }
+
+        @include mq($desktop-med) {
+          padding: 0 rem(24);
+        }
+
+        @include mq($desktop-plus) {
+          padding: 0 rem(30);
+        }
+
+        &:first-child {
+          padding-left: 0;
+        }
+
+        &:last-child {
+          padding-right: 0;
+        }
+
+        img {
+          width: 100%;
+
+          @include mq($tablet-max) {
+            max-width: 400px;
           }
 
         }
 
-      }//li
+        > a {
+          display: block;
+          margin: 0 auto;
+          @include hide-text;
+        }// >a
 
-      // increase size of some logos
-      &:nth-child(2),
-      &:nth-child(3) {
+      }// >li
 
-        @include mq($tablet) {
-          padding: 0 cols(1.4);
-        }
+    }//.logos
 
-      }
-
-      // decrease size of some logos
-      &:last-child {
-
-        @include mq($tablet) {
-          padding: 0 cols(2.4);
-        }
-
-      }
-
-      > a {
-        display: block;
-        margin: 0 auto;
-        @include hide-text;
-        @include background-cover;
-
-        &.aetc {
-          background-image: url($images-path + 'logo-aetc.png');
-          @include aspect-ratio(percentage(230/600));
-        }
-
-        &.iit {
-          background-image: url($images-path + 'logo-inittogether.svg');
-          @include aspect-ratio(percentage(91/402));
-        }
-
-        &.hh {
-          background-image: url($images-path + 'logo-hishealth.svg');
-          @include aspect-ratio(percentage(64/264));
-        }
-
-        &.cqii {
-          background-image: url($images-path + 'logo-cqii.svg');
-          @include aspect-ratio(percentage(246/1000));
-        }
-
-        &.ace {
-          background-image: url($images-path + 'logo-ace.svg');
-          @include aspect-ratio(percentage(141/225));
-          width: 70%;
-        }
-
-        &.ihip {
-          background-image: url($images-path + 'logo-ihip.svg');
-          @include aspect-ratio(percentage(355/1000));
-        }
-
-        &.chatt {
-          background-image: url($images-path + 'logo-chatt.svg');
-          @include aspect-ratio(percentage(250/600));
-        }
-
-        &.ihap {
-          background-image: url($images-path + 'logo-ihap.svg');
-          @include aspect-ratio(percentage(216/1000));
-        }
-
-        &.wv {
-          background-image: url($images-path + 'logo-wellversed.svg');
-          @include aspect-ratio(percentage(120/466));
-        }
-
-        &.deii {
-          background-image: url($images-path + 'logo-deii.svg');
-          @include aspect-ratio(percentage(111/217));
-        }
-
-      }// >a
-
-    }// >li
-
-  }//.logos
+  }//nav
 
 }//.partners
