--- a/style/scss/objects/_social-media.scss
+++ b/style/scss/objects/_social-media.scss
@@ -7,6 +7,10 @@
     > li {
       margin: 0 0 0 rem(20);
 
+      &:first-child {
+        margin-left: 0;
+      }
+
       > a {
         display: flex;
         align-items: center;
