--- a/app/scss/components/_columns.scss
+++ b/app/scss/components/_columns.scss
@@ -4,6 +4,7 @@
 
   @include mq($tablet) {
     display: flex;
+    display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
